--- a/pages/buy/buy.wxss
+++ b/pages/buy/buy.wxss
@@ -260,26 +260,20 @@ margin:20rpx auto;
 /*******底部********************************************  */
 .delect_btn{
   width: 150rpx;
-  height: 70rpx;
-  line-height: 70rpx;
+  height: 100rpx;
+  line-height: 100rpx;
   color: #fff;
   background: #FE9900;
   text-align: center;
-  font-size: 30rpx;
-  border-top-left-radius:40rpx;
-    border-bottom-left-radius:40rpx;
 }
 .go_buy{
-  
   width: 150rpx;
-  height: 70rpx;
-  line-height: 70rpx;
+  height: 100rpx;
+  line-height: 100rpx;
   color: #fff;
   background: #FF2401;
   text-align: center;
   font-size: 30rpx;
-    border-top-right-radius:40rpx;
-    border-bottom-right-radius:40rpx;
 }
 .section-bottom {
   display: flex;
@@ -291,7 +285,7 @@ margin:20rpx auto;
   bottom: 0;
   left: 0;
   margin-bottom: 0;
-  background-color: #fff;
+  background-color: #F2F2F1;
   box-sizing: border-box;
   z-index: 99;
 }
@@ -333,7 +327,6 @@ margin:20rpx auto;
 
 .section-bottom .total {
   flex: 1;
-  text-align: center;
   font-size: 26rpx;
 }
 
