--- a/pages/members/members.wxml
+++ b/pages/members/members.wxml
@@ -67,7 +67,7 @@
      </view>
      </view>
     <view class="num_button">
-    <view><text>充值</text> <text style='color: red; font-size:40rpx;padding-right:10rpx;'>￥40000</text><text>送积分</text><text style='color:red'>8000</text> </view>
+    <view><text>充值</text> <text style='color: red; font-size:40rpx;padding-right:10rpx;font-size:35rpx;'>￥40000</text><text>送积分</text><text style='color:red'>8000</text> </view>
     <view class='naext' bindtap="pay"> 下一步 </view>
     </view>
 </view>
