--- a/utils/template.wxml
+++ b/utils/template.wxml
@@ -12,7 +12,7 @@
         </view>
         <view class='share-xia'>
             <text class="share-kuchun" style='color:{{item.color}}'>{{item.names}}</text>
-            <text class="validity">上限{{item.participats}}人,已报名{{item.peoples}}人</text>
+            <text class="validity">上限<text class='blue'>{{item.participats}}</text>人,已报名<text class='blue'>{{item.peoples}}</text>人</text>
             <text class="validity">活动日期：{{item.start_time}}</text>
         </view>
     </view>
