--- a/pages/password/password.wxml
+++ b/pages/password/password.wxml
@@ -1,8 +1,8 @@
 <!--设置密码-->
 <form bindsubmit="formSubmit" bindreset="formReset">
 <view  class=''>
-    <input name="harvester" placeholder="请设置6位支付密码" />
-    <input name="harvester_phone_num" placeholder="请设置6位支付密码" />
+    <input name="harvester" placeholder="请设置6位支付密码" type="password" />
+    <input name="harvester_phone_num" placeholder="请设置6位支付密码"  type="password" />
     <view >
        <button form-type="submit" class="btn-area" >确定</button>
      </view>
