--- a/pages/coupon/coupon.wxml
+++ b/pages/coupon/coupon.wxml
@@ -5,47 +5,47 @@
 		<view class="title_list {{tab==2? 'on' : ''}}" data-current="2" bindtap="tab_click">已使用</view>
 		<view class="title_list {{tab==3? 'on' : ''}}" data-current="3" bindtap="tab_click">已过期</view>
 	</view>
-	<view class='content'>
-		<view class='order_list'>
-			<view wx:if="{{status==1}}">
+	<view class='content' >
+		<view class='order_list' wx:for="{{order}}" >
+			<view wx:if="{{item.status==1}}">
 				<view class="coupon_box" style="background-image: url(img/u11123.png)">
 					<view class="coupon_money_box">
-						 <view><text class="money">100</text><text class="money_unit">元</text></view>
-						 <view class="limit">满任意金额使用</view>
+						 <view><text class="money">{{item.money}}</text><text class="money_unit">元</text></view>
+						 <view class="limit">满{{item.use_price}}使用</view>
 					</view>
 					<view class="coupon_info_box">
-						<view class="coupon_name">新人现金券</view>
-						<view class="validity">有效期：永久</view>
-						<view class="range">适用范围：所有会员</view>
+						<view class="coupon_name">{{item.label}}</view>
+						<view class="validity">有效期：{{item.start_time}}-{{item.end_time}}</view>
+						<view class="range">适用范围：<text wx:for="{{item.scope}}">{{item}}</text></view>
 						<view class="go_use">立即使用>></view>
 				   </view>
 				</view>
 			</view>
-			<view wx:elif="{{status==2}}">
+			<view wx:elif="{{item.status==2}}">
 				<view class="coupon_box" style="background-image: url(img/u11124.png)">
-					<view class="coupon_money_box">
-						 <view><text class="money">100</text><text class="money_unit">元</text></view>
-						 <view class="limit">满任意金额使用</view>
+						<view class="coupon_money_box">
+						 <view><text class="money">{{item.money}}</text><text class="money_unit">元</text></view>
+						 <view class="limit">满{{item.use_price}}使用</view>
 					</view>
 					<view class="coupon_info_box">
-						<view class="coupon_name">新人现金券</view>
-						<view class="validity">有效期：永久</view>
-						<view class="range">适用范围：所有会员</view>
-						<view class="go_use">已使用>></view>
+						<view class="coupon_name">{{item.label}}</view>
+						<view class="validity">有效期：{{item.start_time}}-{{item.end_time}}</view>
+						<view class="range">适用范围：<text wx:for="{{item.scope}}"></text></view>
+						<view class="go_use">立即使用>></view>
 				   </view>
 				</view>
 			</view>
-			<view wx:elif="{{status==3}}">
+			<view wx:elif="{{item.status==3}}">
 				<view class="coupon_box" style="background-image: url(img/u11124.png)">
-					<view class="coupon_money_box">
-						 <view><text class="money">100</text><text class="money_unit">元</text></view>
-						 <view class="limit">满任意金额使用</view>
+						<view class="coupon_money_box">
+						 <view><text class="money">{{item.money}}</text><text class="money_unit">元</text></view>
+						 <view class="limit">满{{item.use_price}}使用</view>
 					</view>
 					<view class="coupon_info_box">
-						<view class="coupon_name">新人现金券</view>
-						<view class="validity">有效期：永久</view>
-						<view class="range">适用范围：所有会员</view>
-						<view class="go_use">已过期>></view>
+						<view class="coupon_name">{{item.label}}</view>
+						<view class="validity">有效期：{{item.start_time}}-{{item.end_time}}</view>
+						<view class="range">适用范围：<text wx:for="{{item.scope}}"></text></view>
+						<view class="go_use">立即使用>></view>
 				   </view>
 				</view>
 	     	</view>
