--- a/pages/coupon/coupon.wxml
+++ b/pages/coupon/coupon.wxml
@@ -17,7 +17,7 @@
 						<view class="coupon_name">{{item.label}}</view>
 						<view class="validity">有效期：{{item.start_time}}-{{item.end_time}}</view>
 						<view class="range">适用范围：<text wx:for="{{item.scope}}">{{item}}</text></view>
-						<view class="go_use">立即使用>></view>
+						<view class="go_use" bindtap="go_coupon_good">立即使用>></view>
 				   </view>
 				</view>
 			</view>
