--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -44,7 +44,7 @@
       <view class='comment_repay' >
           <view class='comment_ico'><image src='img/u100.jpg'></image></view>
           <view class='comment_name'>瑞川</view>
-          <view class='zhan'><text class='zhan_text'>赞</text><view class='comment_img'><image src='img/u4967.png'></image></view></view>
+          <view class='zhan'><text class='zhan_text'>赞</text><view class='comment_img' bindtap='good'><image src='img/u4967.png'></image></view></view>
           <view class='repay_content'>香港就如《攻壳机动队》里描绘的那样，垂直，密集的建筑，有着挂毯一样的美丽质感。 但在这个全球最密集的城市，“死后能住进棺材”纯属是妄念。</view>
           <view class='repay_list'> <text >潮州</text><text>刚刚</text></view>
       </view>
