--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -72,6 +72,6 @@
 <input class='input' type='text' placeholder='写评论' bindtap="bindReply"  disabled='display'  data-id="comments"></input>
 <view class='share'><image src='img/u5055.png'></image></view>
 <view class='monly'>¥{{information.cost_moneny}}</view>
-<view class='buttons' bindtap='pay' wx:if="{{apply}}">立即报名</view>
-<view class='buttons' bindtap='pay' wx:else>已报名</view>
+<view class='buttons' bindtap='pay' wx:if="{{apply==0}}">立即报名</view>
+<view class='buttons'  wx:else>已报名</view>
 </view>
