--- a/pages/select_address/select_address.wxml
+++ b/pages/select_address/select_address.wxml
@@ -5,7 +5,7 @@
 			<view class='radio' >
 				<radio value="{{item.id}}" color='#fff' wx:if="{{is}}" />
 			</view>
-			<view class='add_information' bindtap="{{is_select_address}}"  data-tel='{{item.harvester_phone_num}}' data-name='{{item.harvester}}' data-address='{{item.address_name}}{{item.harvester_real_address}}' name="aaa">
+			<view class='add_information' bindtap="{{is_select_address}}"  data-tel='{{item.harvester_phone_num}}' data-name='{{item.harvester}}' data-address='{{item.address_name}}{{item.harvester_real_address}}'  data-id='{{item.id}}' name="aaa" >
 				<view>
 					<text class='tel'>{{item.harvester_phone_num}}</text>
 					<text> {{item.harvester}} </text>
